--- a/McvMovie/appsettings.json
+++ b/McvMovie/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+      "ConnectionStrings": {
+      "CadenaSQL": "Data Source=(local); Initial Catalog=SEMANAS;Integrated Security=true"
+    },
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
